# full_body_vtuber

./: pyproject.toml
full_body_vtuber/: __main__.py
